# phoenix-shared-interface

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  contributing.md  readme.md
.github/workflows/: autoformat.yml  build.yml  lint.yml
include/phoenix/cffi/: Animation.h  Api.h  BspTree.h  Buffer.h  Cutscene.h  DaedalusScript.h  DaedalusVm.h  Font.h  Logging.h  Material.h  Mesh.h  Model.h  ModelHierarchy.h  ModelMesh.h  ModelScript.h  MorphMesh.h  MultiResolutionMesh.h  Texture.h  Vdf.h  Vfs.h  Vm.h  World.h
src/: Animation.cc  BspTree.cc  Buffer.cc  Cutscene.cc  DaedalusScript.cc  DaedalusVm.cc  Font.cc  Logging.cc  Main.cc  Material.cc  Mesh.cc  Model.cc  ModelHierarchy.cc  ModelMesh.cc  ModelScript.cc  MorphMesh.cc  MultiResolutionMesh.cc  Prelude.h  Texture.cc  Vdf.cc  Vfs.cc  Vm.cc  World.cc
support/: BuildSupport.cmake
